--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.bonnfiregames.customnativecontainers",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "displayName": "Custom Native Containers",
   "description": "This package contains additional native containers and helper methods",
   "unity": "2023.1",
@@ -9,6 +9,8 @@
   "changelogUrl": "",
   "licensesUrl": "",
   "dependencies": {
+    "com.unity.burst": "1.8.8",
+    "com.unity.collections": "1.2.4"
  },
  "keywords": [
     "NativeContainer",
