--- a/Tests/Editor/BonnFireGames.CustomNativeContainers.Editor.Tests.asmdef
+++ b/Tests/Editor/BonnFireGames.CustomNativeContainers.Editor.Tests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "BonnFireGames.CustomNativeContainers"
+        "BonnFireGames.CustomNativeContainers",
+        "Unity.Burst"
     ],
     "includePlatforms": [
         "Editor"
