--- a/Tests/Editor/BonnFireGames.CustomNativeContainers.Editor.Tests.asmdef
+++ b/Tests/Editor/BonnFireGames.CustomNativeContainers.Editor.Tests.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "BonnFireGames.CustomNativeContainers",
-        "Unity.Burst"
+        "Unity.Burst",
+        "Unity.Collections"
     ],
     "includePlatforms": [
         "Editor"
